k8s/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-verifier-blue
  labels:
    app: email-verifier
    version: blue
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30081
    protocol: TCP
    name: http
  selector:
    app: email-verifier
    version: blue
