k8s/blue-service.yml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
spec:
  type: ClusterIP
  selector:
    app: email-verifier
    version: blue
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
