k8s/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-verifier-green
  labels:
    app: email-verifier
    version: green
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30082
    protocol: TCP
    name: http
  selector:
    app: email-verifier
    version: green
