k8s/green-service.yml
apiVersion: v1
kind: Service
metadata:
  name: green-service
spec:
  type: ClusterIP
  selector:
    app: email-verifier
    version: green
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
