k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: email-verifier-svc
spec:
  type: LoadBalancer  # Changed from ClusterIP to LoadBalancer
  selector:
    app: email-verifier
    version: blue
  ports:
    - protocol: TCP
      port: 3000  
      targetPort: 3000
