k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-verifier-blue-svc
spec:
  type: ClusterIP
  selector:
    app: email-verifier
    version: blue
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: email-verifier-green-svc
spec:
  type: ClusterIP
  selector:
    app: email-verifier
    version: green
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
