k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: email-verifier-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /green(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: email-verifier-green-svc
                port:
                  number: 3000
          - path: /blue(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: email-verifier-blue-svc
                port:
                  number: 3000
          - path: /(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: email-verifier-blue-svc
                port:
                  number: 3000
